# Braccio-Tinkerkit-Arduino

./: .gitignore  GAMEPAD_TEST_GUIDE.md  GAMEPAD_USAGE_GUIDE.md  Notas.txt  README.md  detailed_ik_diagnosis.py  start_gamepad_control.sh  start_gamepad_direct.sh  start_gamepad_only.sh  test_conservative_ik.py  test_fk_then_ik.py  test_gamepad.py  test_joint_limits.py  test_moveit_fk.py  test_moveit_ik.py  test_original_position.py  test_problematic_ik.py  test_srdf_home.py
braccio_bringup/launch/: sim.launch.py
braccio_description/braccio_description/: launch_mixin.py
braccio_description/gazebo/: braccio.gazebo.xacro  braccio.world
braccio_gamepad_teleop/: CMakeLists.txt  README.md  package.xml
braccio_gamepad_teleop/launch/: gamepad_control.launch.py  gamepad_direct.launch.py  gamepad_only.launch.py  gamepad_teleop.launch.py  joint_test.launch.py
braccio_gamepad_teleop/scripts/: gamepad_teleop.py
braccio_gamepad_teleop/src/: gamepad_direct.cpp  gamepad_teleop.cpp  home_verifier.cpp  joint_test.cpp
braccio_hardware/include/braccio_hardware/: arduino_comms.hpp  braccio_hardware.hpp
braccio_hardware/src/: braccio_hardware.cpp
braccio_moveit_config/: CMakeLists.txt
braccio_moveit_config/config/: kinematics.yaml  pick_and_place_config.yaml
braccio_moveit_config/scripts/: inverse_kinematics_calculator.py  pick_and_place_configurable.py  pick_and_place_simple.py  position_tester.py  vision_auto_pick_and_place.py
braccio_vision/: CMakeLists.txt  package.xml
braccio_vision/braccio_vision/: __init__.py  camera_spawner.py  object_detector.py  object_spawner.py  vision_pick_and_place.py
braccio_vision/config/: camera_calibration.json  vision_config.yaml
braccio_vision/launch/: sequence_selector.launch.py  vision_auto_pick_and_place.launch.py  vision_simulation.launch.py
braccio_vision/scripts/: calculate_homography.py  camera_spawner.py  ik_workspace_tester.py  inverse_kinematics_calculator.py  object_detector.py  object_spawner.py  pick_and_place_configurable.py  sequence_selector.py  test_homography.py  vision_auto_pick_and_place.py
braccio_vision/urdf/: overhead_camera.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/braccio_bringup/share/ament_index/resource_index/package_run_dependencies/: braccio_bringup
install/braccio_bringup/share/ament_index/resource_index/parent_prefix_path/: braccio_bringup
install/braccio_bringup/share/braccio_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/braccio_bringup/share/braccio_bringup/launch/: gazebo_sim.launch.py  move_group.launch.py  pick_and_place.py  sim_p&p.launch.py
install/braccio_description/local/lib/python3.10/dist-packages/braccio_description/: launch_mixin.py
install/braccio_description/local/lib/python3.10/dist-packages/braccio_description-0.0.0-py3.10.egg-info/: PKG-INFO  top_level.txt
install/braccio_description/share/braccio_description/: local_setup.dsv  local_setup.sh  package.sh
install/braccio_description/share/braccio_description/gazebo/: mundo.world
install/braccio_description/share/braccio_description/urdf/: braccio_description.urdf.xacro
install/braccio_hardware/local/lib/python3.10/dist-packages/braccio_hardware-0.0.0-py3.10.egg-info/: PKG-INFO
install/braccio_hardware/share/braccio_hardware/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/braccio_hardware/share/braccio_hardware/cmake/: braccio_hardwareConfig.cmake
install/braccio_moveit_config/lib/braccio_moveit_config/: gripper_debugger.py  pick_and_place.py  pick_and_place_advanced.py  pick_and_place_configurable.py
install/braccio_moveit_config/share/ament_index/resource_index/package_run_dependencies/: braccio_moveit_config
install/braccio_moveit_config/share/ament_index/resource_index/parent_prefix_path/: braccio_moveit_config
install/braccio_moveit_config/share/braccio_moveit_config/: local_setup.sh  package.ps1  package.sh
install/braccio_moveit_config/share/braccio_moveit_config/cmake/: braccio_moveit_configConfig.cmake
install/braccio_moveit_config/share/braccio_moveit_config/config/: joint_limits.yaml  pick_and_place_config.yaml
install/braccio_moveit_config/share/braccio_moveit_config/launch/: test.launch.py
install/braccio_vision/lib/braccio_vision/: camera_calibrator.py  camera_spawner.py  camera_viewer.py  object_detector.py  object_spawner.py  vision_demo.py  vision_pick_and_place.py
install/braccio_vision/local/lib/python3.10/dist-packages/braccio_vision/: __init__.py  object_detector.py  object_spawner.py
install/braccio_vision/local/lib/python3.10/dist-packages/braccio_vision-1.0.0-py3.10.egg-info/: PKG-INFO
install/braccio_vision/share/ament_index/resource_index/package_run_dependencies/: braccio_vision
install/braccio_vision/share/ament_index/resource_index/parent_prefix_path/: braccio_vision
install/braccio_vision/share/braccio_vision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/braccio_vision/share/braccio_vision/cmake/: braccio_visionConfig-version.cmake  braccio_visionConfig.cmake
install/braccio_vision/share/braccio_vision/config/: vision_config.yaml
install/braccio_vision/share/braccio_vision/environment/: ament_prefix_path.dsv  path.dsv
install/braccio_vision/share/braccio_vision/launch/: complete_vision_test.launch.py  simple_vision_test.launch.py  vision_simulation.launch.py  vision_system.launch.py  vision_with_camera.launch.py
install/braccio_vision/share/braccio_vision/urdf/: braccio_with_vision.urdf.xacro  overhead_camera.urdf.xacro  vision_world.sdf
log/: latest_build
sim-to-real/: README.md  calculate_real_homography.py  camera_viewer.py  color_square_detector.py  webcam_publisher.py
