<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>braccio_vision</name>
  <version>1.0.0</version>
  <description>Sistema de visión y percepción para el robot Braccio</description>
  <maintainer email="ivan@example.com">Ivan Luque Valverde</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencias de ROS2 -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Dependencias para control del robot -->
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  
  <!-- Dependencias para MoveIt -->
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Dependencias para visión -->
  <depend>image_geometry</depend>
  <depend>camera_calibration_parsers</depend>

  <!-- Dependencias para Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <!-- Dependencias para URDF -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Dependencias de Python -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
